--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   padding: 10px;
   font-weight: bold;
   border: 1px solid gray;
+  cursor: pointer;
 }
 
 .item0 {
@@ -18,6 +19,7 @@
   text-align: right;
   background-color: rgb(144, 141, 141);
   padding: 15px;
+  cursor: move;
 }
 
 .item17 {
